[project]
name = "devpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langfuse>=4.6.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
